<resources>
    <string name="app_name" translatable="false">Projétil Kanban</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_task_description">Description</string>
    <string name="activity_task_category_hint">Category</string>
    <string name="activity_task_assign">Self Assign</string>

    <string name="action_add_project">Add project</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_filter">Filter</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="column_todo">TODO</string>
    <string name="column_doing">DOING</string>
    <string name="column_done">DONE</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="snack_task_moved" formatted="false">Task moved to %s</string>
    <string name="snack_task_added">Task added to %s</string>
    <string name="snack_action_undo">Undo</string>

    <string name="task_activity_calendar_label">Define estimate due date</string>

    <!--ALERT DIALOG ADD CARD-->
    <string name="alert_dialog_edit_task_top_title">Edit Task Name</string>
    <string name="alert_dialog_edit_task_hint">Task Name</string>

    <string name="alert_dialog_add_project_top_title">Add Project</string>
    <string name="action_manage_project">Manage project…</string>

    <string name="project_members_title">Members of %s</string>
    <string name="project_current_members_empty">There are no users in this project.</string>
    <string name="project_add_members_empty">There are no more users to add.</string>
    <string name="project_section_owner">Owner</string>
    <string name="project_section_members">Members in this project</string>
    <string name="project_section_add_members">Add members</string>

    <string name="alert_dialog_add_card_top_title">Add Task</string>
    <string name="alert_dialog_add_card_title_field">Title</string>
    <string name="alert_dialog_add_card_description_field">Description</string>
    <string name="alert_dialog_string_empty_error">Mandatory field</string>
    <string name="tasks_empty_text">No tasks here.</string>
    <string name="project_empty_text">Select a project in the navigation drawer</string>

    <string name="nav_hint_external">Opens a new app</string>
    <string name="error_app_not_installed">The app is not installed.</string>

    <string name="title_signin_github">Sign in with GitHub</string>
    <string name="title_signin_facebook">Sign in with Facebook</string>
    <string name="title_signin_google">Sign in with Google</string>
    <string name="title_signin_twitter">Sign in with Twitter</string>

    <string name="alert_dialog_progress_title">Acessing Data</string>
    <string name="progress_signin">Signing in…</string>

    <string name="action_signin_github">Sign in with Github</string>
    <string name="action_signin_facebook">Sign in with Facebook</string>
    <string name="action_signin_google">Sign in with Google</string>
    <string name="action_signin_twitter">Sign in with Twitter</string>

    <!-- Credenciais OAth Github -->
    <string name="github_oauth_url" translatable="false">https://github.com/login/oauth/authorize</string>
    <string name="github_redirect_url" translatable="false">http://localhost</string>
    <string name="github_token_url" translatable="false">https://github.com/login/oauth/access_token</string>
    <string name="github_client_id" translatable="false">7314ffb17a43cadec69d</string>
    <string name="github_client_secret" translatable="false">7f7fea342246051edfa2b7bf56d580bd70732e90</string>
    <string name="app_package_comms" translatable="false">br.ufrr.dcc.engenhariadesoftware.comunicacao</string>
    <string name="app_package_burndown" translatable="false">software.de.engenharia.com.burndown</string>
    <string name="app_package_gantt" translatable="false">com.example.kevin.gbproject</string>

</resources>
