<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufrr.eng2.kanban.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="0dp" />


    <RelativeLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:layout_marginTop="12dp"
            android:id="@+id/login_A"
            android:onClick="gotoMain"
            android:hint="@string/action_signin_facebook"
            android:backgroundTint="#3b5998"
            android:textColorHint="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>

        <Button
            android:id="@+id/login_B"
            android:hint="@string/action_signin_twitter"
            android:onClick="gotoMain"
            android:backgroundTint="#55acee"
            android:textColorHint="#ffff"
            android:layout_below="@id/login_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign"
            android:onClick="onClickGoogleSign"
            android:hint="@string/action_signin_google"
            android:backgroundTint="#dd4b39"
            android:textColorHint="#ffff"
            android:layout_below="@id/login_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/github_sign"
            android:onClick="onClickGithubSign"
            android:hint="@string/action_signin_github"
            android:backgroundTint="#000000"
            android:textColorHint="#ffff"
            android:layout_below="@id/google_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>




</LinearLayout>



