<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="br.ufrr.eng2.kanban.ProjectActivity">

        <TextView
            android:id="@+id/section_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/project_section_owner"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/owners_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/section_owner"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:scrollbars="vertical"
            android:visibility="visible"
            tools:listitem="@layout/list_item_member"/>

        <TextView
            android:id="@+id/section_current_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/owners_list"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/project_section_members"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <br.ufrr.eng2.kanban.widget.RecyclerViewEmpty
            android:id="@+id/current_members_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/section_current_members"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:scrollbars="vertical"
            android:visibility="visible"
            tools:listitem="@layout/list_item_member" />

        <TextView
            android:id="@+id/empty_members_list_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_members_list"
            android:padding="8dp"
            android:text="@string/project_current_members_empty"
            android:textAlignment="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/section_add_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_members_list_text"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/project_section_add_members"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <br.ufrr.eng2.kanban.widget.RecyclerViewEmpty
            android:id="@+id/add_members_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/section_add_members"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:scrollbars="vertical"
            android:visibility="visible"
            tools:listitem="@layout/list_item_member" />

        <TextView
            android:id="@+id/empty_add_members_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_members_list"
            android:padding="8dp"
            android:text="@string/project_add_members_empty"
            android:textAlignment="center"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>