<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="br.ufrr.eng2.kanban.TaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:transitionName="task_background">

    </RelativeLayout>

    <View
        android:id="@+id/toolbar_background"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-12dp"
        android:background="#ab47bc"
        android:transitionName="task_color" />

    <View
        android:id="@+id/toolbar_background_reveal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/appBarLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ab47bc"
        android:transitionName="task_color"
        android:visibility="gone" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-8dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Título da tarefa" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:clipToPadding="false"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchAssign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_task_assign" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/task_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_task_description"
                    android:maxLines="6" />

            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:ms_alignLabels="true"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelText="@string/activity_task_category_hint"
                app:ms_multiline="false" />

            <Switch
                android:id="@+id/switchDatepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/task_activity_calendar_label" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:visibility="gone">

            </DatePicker>
        </LinearLayout>


    </ScrollView>


</RelativeLayout>